--- a/package.json
+++ b/package.json
@@ -49,8 +49,11 @@
     "webpack-merge": "*"
   },
   "dependencies": {
+    "@redux-devtools/extension": "^3.2.5",
     "prop-types": "*",
     "react": "*",
-    "react-dom": "*"
+    "react-dom": "*",
+    "react-redux": "^8.1.3",
+    "redux": "^4.2.1"
   }
 }
