--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "@redux-devtools/extension": "^3.2.5",
+    "axios": "^1.6.0",
     "prop-types": "*",
     "react": "*",
     "react-dom": "*",
