--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react": "*",
     "react-dom": "*",
     "react-redux": "^8.1.3",
+    "react-router-dom": "^6.18.0",
     "redux": "^4.2.1"
   }
 }
