--- a/package.json
+++ b/package.json
@@ -49,6 +49,9 @@
     "webpack-merge": "*"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.16",
     "@redux-devtools/extension": "^3.2.5",
     "axios": "^1.6.0",
     "prop-types": "*",
